<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".amman_hb"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/Housing_Bank"
        android:textColor="#D50000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/Housing_Bank"
        app:srcCompat="@drawable/hb_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="main_hb"
                android:text="@string/The_main_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="jabal_hb"
                android:text="@string/Jabal_Amman_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="abdali_hb"
                android:text="@string/Al_Abdali_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="basha_hb"
                android:text="@string/Ein_Al_Basha_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="shafa_hb"
                android:text="@string/Shafa_Badran_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="jubeiha_hb"
                android:text="@string/Al_Jubeiha_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="tareq_hb"
                android:text="@string/Tareq_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="marka_hb"
                android:text="@string/Marka_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="hashimi_hb"
                android:text="@string/Al_Hashimi_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="madinat_Al_hussein_hb"
                android:text="@string/Madinat_Al_Hussein_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="nuzha_hb"
                android:text="@string/An_Nuzha_St_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="tla_hb"
                android:text="@string/Tla_al_Ali_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="medical_center_hb"
                android:text="@string/King_Hussein_Medical_Center_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="city_hb"
                android:text="@string/City_Mall_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="gardens_hb"
                android:text="@string/Al_Gardens_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="mecca_hb"
                android:text="@string/Mecca_Street_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="rashed_hb"
                android:text="@string/Al_Rashid_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="byader_hb"
                android:text="@string/Al_Bayader_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="swaifyeh_hb"
                android:text="@string/Al_Swaifyeh_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="abdou_hb"
                android:text="@string/Abdoun_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="ghbar_hb"
                android:text="@string/Dair_Ghbar_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="taj_hb"
                android:text="@string/Taj_Mall_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="nazzal_hb"
                android:text="@string/Hai_Nazzal_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="salam_hb"
                android:text="@string/Al_Salam_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="ashrafyeh_hb"
                android:text="@string/Al_Ashrafyeh_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="wehdat_hb"
                android:text="@string/Al_Wehdat_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="JRTV_hb"
                android:text="@string/JRTV_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="jwaideh_hb"
                android:text="@string/Al_Jwaideh_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="naur_hb"
                android:text="@string/Naur_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="sahab_hb"
                android:text="@string/Sahab_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="muwaqqar_hb"
                android:text="@string/Al_Muwaqqar_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>