<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".al_balqa_ahli"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/Al_Ahli_Bank"
        android:textColor="#D50000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/Al_Ahli_Bank"
        app:srcCompat="@drawable/ahli_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="bau_ahli"
                android:text="@string/BAU_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="salt_ahli"
                android:text="@string/Al_Salt_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="gate_ahli"
                android:text="@string/Al_Salt_Gate_branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="alla_ahli"
                android:text="@string/Deir_Alla_Branch"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_red_dark"
                tools:ignore="OnClick,UsingOnClickInXml" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>